<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.home.HomeFragment"
    android:orientation="vertical">

    <androidx.cardview.widget.CardView
        android:id="@+id/home_card_one"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:focusable="true"
        android:clickable="true">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="#FFFFFF"
            android:orientation="vertical" >
            <ImageView
                android:id="@+id/home_image_one"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:layout_marginStart="16dp"
                android:layout_marginTop="15dp"
                android:src="@drawable/game_one" />
            <TextView
                android:id="@+id/home_title_one"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_alignTop="@+id/home_image_one"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="10dp"
                android:layout_toEndOf="@+id/home_image_one"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="@color/colorPrimary"
                android:text="@string/home_one_title" />
            <TextView
                android:id="@+id/home_description_one"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignStart="@+id/home_title_one"
                android:layout_alignEnd="@+id/home_title_one"
                android:layout_below="@+id/home_title_one"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:text="@string/home_one_description" />
        </RelativeLayout>
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/home_card_two"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:focusable="true"
        android:clickable="true">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="#FFFFFF"
            android:orientation="vertical" >
            <ImageView
                android:id="@+id/home_image_two"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:layout_marginStart="16dp"
                android:layout_marginTop="15dp"
                android:src="@drawable/game_two" />
            <TextView
                android:id="@+id/home_title_two"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_alignTop="@+id/home_image_two"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="10dp"
                android:layout_toEndOf="@+id/home_image_two"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="@color/colorPrimary"
                android:text="@string/home_two_title" />
            <TextView
                android:id="@+id/home_description_two"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignStart="@+id/home_title_two"
                android:layout_alignEnd="@+id/home_title_two"
                android:layout_below="@+id/home_title_two"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:text="@string/home_two_description" />
        </RelativeLayout>
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/home_card_three"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:focusable="true"
        android:clickable="true">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="#FFFFFF"
            android:orientation="vertical">
            <ImageView
                android:id="@+id/home_image_three"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:layout_marginStart="16dp"
                android:layout_marginTop="15dp"
                android:src="@drawable/game_three" />
            <TextView
                android:id="@+id/home_title_three"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_alignTop="@+id/home_image_three"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="10dp"
                android:layout_toEndOf="@+id/home_image_three"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="@color/colorPrimary"
                android:text="@string/home_three_title" />
            <TextView
                android:id="@+id/home_description_three"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignStart="@+id/home_title_three"
                android:layout_alignEnd="@+id/home_title_three"
                android:layout_below="@+id/home_title_three"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:text="@string/home_three_description" />
        </RelativeLayout>
    </androidx.cardview.widget.CardView>

</LinearLayout>